--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@editorjs/quote",
-  "version": "2.3.0-1",
+  "version": "2.3.0",
+  "version-tanmer": "1.0.1",
   "keywords": [
     "codex editor",
     "tool",
